# bowenv2

./: .gitignore  AGENTS.md  ANALYSIS.md  BUGS.md  CODEBASE_IMPROVEMENTS.md  Cargo.toml  EVAL_RESULTS.md  RESULTS.md
crates/gz-cli/: Cargo.toml
crates/gz-cli/examples/: diagnose_checkpoint_match.rs  diagnose_symmetric_value_expectation.rs  eval_symmetric_whittle_set.rs  eval_whittle_set.rs  eval_whittle_set_greedy.rs  probe_batches.rs  scan_policy_roots.rs  store_stats.rs
crates/gz-cli/src/: distill.rs  lib.rs  main.rs  sample_protocol.rs  selfplay.rs  selfplay_probe.rs  serve.rs
crates/gz-cli/tests/: distill.rs  selfplay.rs  serve.rs
crates/gz-orchestrator/: Cargo.toml
crates/gz-orchestrator/examples/: serial_gumbel_bench.rs
crates/gz-orchestrator/src/: admission.rs  batch.rs  bench.rs  ids.rs  lanes.rs  leases.rs  lib.rs  pool.rs  project.rs  reference.rs  root.rs  serial.rs
crates/gz-orchestrator/tests/: admission.rs  batch.rs  bench.rs  featurized.rs  featurized_process.rs  project.rs  reference.rs  release.rs  replay_integration.rs  serial.rs  threaded.rs  whittle.rs
crates/gz-replay/: Cargo.toml
crates/gz-replay/src/: append.rs  database.rs  error.rs  keys.rs  lib.rs  records.rs  sample.rs  store.rs
crates/gz-replay/tests/: sample.rs  store.rs
python/: pyproject.toml
python/benches/: codec_bench.py  model_bench.py  trainer_compile_bench.py
python/graphzero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/gz/checkpoints/: __init__.py  manifest.py  publish.py  source.py  weights.py
python/tests/: conftest.py  test_ablation_queue.py  test_checkpoints.py  test_codec.py  test_common.py  test_distill.py  test_driver_stats.py  test_fixtures.py  test_layering.py  test_model_torch.py  test_proto.py  test_sampler.py  test_server.py  test_stub.py  test_targets.py  test_torch_backend.py  test_trainer_driver.py  test_trainer_loop.py  test_trainer_optim.py  test_trainer_publish.py
python/tools/: mechinterp_heads.py  probe_checkpoints.py  run_ablation_queue.py
(+514 files in other folders)
