[package]
name = "gz-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
gz-engine = { path = "../gz-engine" }
gz-eval = { path = "../gz-eval" }
gz-search = { path = "../gz-search" }

[dev-dependencies]
gz-engine-whittle = { path = "../gz-engine-whittle" }
gz-eval-whittle = { path = "../gz-eval-whittle" }
